add privacy/terms/app-ads.txt for store deploy

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,13 @@
         작은 글씨를 쉽고 빠르게 요약합니다.<br/>
         <strong>복잡한 글 → 핵심만 요약</strong>
       </div>
+      <!-- 소개 카드 끝쪽 어딘가에: -->
+<p style="margin-top:10px; text-align:center; font-size:14px;">
+  <a href="/privacy.html" style="color:#7aa2ff; text-decoration:none;">개인정보처리방침</a>
+  &nbsp;·&nbsp;
+  <a href="/terms.html" style="color:#7aa2ff; text-decoration:none;">이용약관</a>
+</p>
+
     </section>
 
     <!-- 언어(첫 화면만) -->
